Thu Apr 18 14:09:51 CEST 2002  Pekka Riikonen <priikone@silcnet.org>

	* Added silc_mime_parse function to parse MIME headers.
	  Affected files are lib/silcutil/silcstruti.[ch].

Wed Apr 17 22:07:59 CEST 2002  Johnny Mnemonic <johnny@themnemonic.org>

	* Fixed a bug in the pid writing function, which couldn't be
	  written in a root-owned directory.

Tue Apr 16 09:34:40 EEST 2002  Pekka Riikonen <priikone@silcnet.org>

	* Defined that channel message to unknown Channel ID must
	  cause SILC_NOTIFY_TYPE_ERROR notify message to the sender.
	  Updated the protocol specs and the code in server.  The
	  affected file is silcd/packet_receive.c.

Mon Apr 15 19:57:57 EEST 2002  Pekka Riikonen <priikone@silcnet.org>

	* Added new notify type SILC_NOTIFY_TYPE_ERROR and specified
	  that it is used to send error notifys if error occurs during
	  some SILC packet processing, except commands.  The error
	  types are same as for command reply types.  Defined that
	  if private message is sent to unknown Client ID the error
	  is sent in SILC_NOTIFY_TYPE_ERROR instead of command reply.
	  Updated the protocol specs and code.  Affected files are
	  lib/silccore/silcnotify.h, added lib/silccore/silcstatus.h,
	  lib/silcclient/client_notify.c, silcd/packet_receive.c,
	  and irssi/src/silc/core/client_ops.c.  Renamed the
          SilcCommandStatus to SilcStatus.

	* Defined the use of extra WHOIS attributes in WHOIS command.
	  The <Requested Attributes> (defined in a separate document)
	  can be used to request additional information about user 
	  not returned by standard WHOIS command.  Defined that server
	  can send WHOIS command directly to client.  Client provides
 	  the requested attributes to the server.  Updated the protocol
	  specs.  Protocol TODO #4.  Implementation is not done yet
          (Protocol TODO #24).

	* Renamed function silc_client_command_status_message to	
	  silc_client_status_message.  Affected files are
	  lib/silcclient/command_reply.[ch].
